# fossil-sanity

./: README.md  meson.build
code/: meson.build
code/logic/: health.c  logging.c  meson.build  mesonbuild  parser.c  sanity.c  validate.c
code/logic/fossil/sanity/: framework.h  parser.h  sanity.h  validate.h
code/logic/sanity/: framework.h  health.h  logging.h  sanity.h  validate.h
code/tests/: meson.build
code/tests/cases/: test_parser.c  test_parser.cpp  test_sample.c  test_sample.cpp  test_sanity.c  test_sanity.cpp  test_validate.c
subprojects/: fossil-test.wrap
